Finished land page, navbar & bug fixes

--- a/portfolio-website/src/Assets/theme.css
+++ b/portfolio-website/src/Assets/theme.css
@@ -2,7 +2,7 @@
     text-align: center;
     font-size: 30px !important;
     text-transform: uppercase;
-    letter-spacing: 0.1em;
+    letter-spacing: 0.08em;
 }
 
 ul {
@@ -26,6 +26,27 @@ li {
     height: 3px;
 }
 
-p {
-    font-size: 15px;
+.line2 {
+    background: #c55;
+    margin: auto;
+    width: 100%;
+    height: 2px;
 }
+
+.button {
+    cursor: pointer;
+    transition: all ease-in 0.1s;
+}
+
+.button:hover{
+    font-size: 1.8em;
+    color: rgb(59, 121, 255)
+}
+
+.clickable {
+    cursor: pointer;
+}
+
+/* p {
+    font-size: 15px;
+} */
