--- a/portfolio-website/src/Components/ProjectItem/ProjectItem.css
+++ b/portfolio-website/src/Components/ProjectItem/ProjectItem.css
@@ -1,32 +1,37 @@
-.box2 {
-    border: transparent 1px solid;
-    padding: 20px;
-    padding-top: 30px;
-    box-sizing: border-box;
-    width: 100%;
-    height: 500px;
-    background: linear-gradient(rgba(0,0,0,0.04),rgba(0,0,0,0.2));
-    text-align: center;
-    opacity: 0.7;
-    border-radius: 6px;
-    cursor: pointer;
-    display: grid;
-    grid-template-rows: 5fr 1fr;
-}
-
-.box-display {
+.projectItemDisplay {
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
+    border: solid 3px darkgray;
+    border-radius: 20%;
+    filter: grayscale(100%);
+    transition: all linear 0.2s;
     display: flex;
     align-items: center;
-}
-  
-.box-display img {
-    margin: auto;
-    max-width: 100%;
-    max-height: 100%;
+    justify-content: space-evenly;
+    background: #f5f5f5;
+    cursor: pointer;
 }
 
-.grayAnim img {
-    filter: grayscale(100%);
-    transition: all linear 0.3s;
+.projectItemDisplay:hover {
+    filter:grayscale(0);
+    border-radius: 10%;
+    border-color: #daa;
 }
-  
+
+.projectItemDisplay img {
+    min-width: 100%;
+}
+
+.projectModalImg {
+    min-width: 100%;    
+}
+
+.darkFont {
+    color: #111;
+}
+
+.technologies {
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+}
